# cobra

./: commonCommands.txt
install/: local_setup.sh  setup.sh
log/: latest_build
merged_bag/: merged.db3  metadata.yaml
myRecord/move1/: metadata.yaml  move1_0.db3
myRecord/move10/: metadata.yaml  move10_0.db3
myRecord/move11/: metadata.yaml  move11_0.db3
myRecord/move12/: metadata.yaml  move12_0.db3
myRecord/move13/: metadata.yaml  move13_0.db3
myRecord/move14/: metadata.yaml  move14_0.db3
myRecord/move2/: metadata.yaml  move2_0.db3
myRecord/move3/: metadata.yaml  move3_0.db3
myRecord/move4/: metadata.yaml  move4_0.db3
myRecord/move5/: metadata.yaml  move5_0.db3
myRecord/move6/: metadata.yaml  move6_0.db3
myRecord/move7/: metadata.yaml  move7_0.db3
myRecord/move8/: metadata.yaml  move8_0.db3
myRecord/move9/: metadata.yaml  move9_0.db3
src/cobra_moveit_config/: .setup_assistant  CMakeLists.txt
src/cobra_moveit_config/config/: moveit_controllers.yaml
src/cobra_moveit_config/launch/: demo.launch.py  moveit_rviz.launch.py
src/cobrotic/: package.xml  setup.cfg  setup.py
src/cobrotic/cobrotic_nodes/: replay_bag_trajectory.py
src/cobrotic/config/: cobra.srdf  cobra.urdf.xacro  velocity_config.yaml  waypoints.yaml
src/cobrotic/launch/: gazebo.launch.py  initiate.launch.py
src/cobrotic/meshes/: l_finger_tip.dae
src/cobrotic/scripts/: pick_an_obj.py  replay_bag_trajectory.py
src/cobrotic/urdf/: cobra.urdf
src/cobrotic_moveit/: .setup_assistant  CMakeLists.txt
src/cobrotic_moveit/config/: cobra.ros2_control.xacro  cobra.srdf  (+1 more)
(+54 files in other folders)
