<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cobrotic</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="aj@todo.todo">aj</maintainer>
  <license>TODO: License declaration</license>
  <exec_depend>urdf_launch</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
